--- a/degreemaila.html
+++ b/degreemaila.html
@@ -9,40 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="degreemaila.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/4ohVTa35SaE?si=yidStx8yOAN4VVUf">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="degreemaila.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/4ohVTa35SaE?si=iMeGMuJ_7_tC0HcO">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Degree Maila (MA 3rd CLASS)
-            </div><br>
-            <div id="genre">
-                Comedy, Drama, Romance | 2h 30m | 13 Chaitra,2080
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">"Degree Maila" unfolds as a captivating comic tale that delves into the life of a man on a quest to find his place in society while longing for love and recognition. Amidst a whirlwind of trials and errors, he revolts against societal expectations and surrenders to personal aspirations that define his journey.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Dayahang Rai</li>
-                        <li>Anchal Sharma</li>
-                        <li>Kamal Mani Nepal</li>
-                        <li>Shekhar Chapagain</li>
-                        <li>Hiuwala Gautam, etc.</li>
-                    </ul>
-                </details>               
-            </div>
+<!--             <h3>Parts</h3>
+            <div id="parts">
+                <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div>
+            </div> -->
         </div>
     </div>
 </body>
