--- a/fullbari.html
+++ b/fullbari.html
@@ -9,39 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="fullbari.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/gBM4IwixICg?si=Cr198PdQQ3eIZSku">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="duinumbari.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/gBM4IwixICg?si=GYFOfjxRl0-BJj7j">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Fulbari
-            </div><br>
-            <div id="genre">
-                Drama, Family | 2h 10m | 5 Falgun,2079
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">A family is challenged by a mother's health condition and the three grown sons are too busy with their own lives to truly be there for their mom and dad.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Bipin Karki</li>
-                        <li>Aruna Karki</li>
-                        <li>Dayahang Rai</li>
-                        <li>Gaumaya Gurung</li>
-                        <li>Priyanka Karki, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
