--- a/gharjwai.html
+++ b/gharjwai.html
@@ -9,38 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="gharjwai.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/E4IhWK1459M?si=gEk3R0gMhiQKNnC3">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="duinumbari.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/E4IhWK1459M?si=BlAjzluuJxeqVml7">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Gharjwai
-            </div><br>
-            <div id="genre">
-                Drama, Romance | 2h 14m | 28 Asar,2081
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">“Gharjwai” revolves around the intertwined lives of three main characters: a seasoned farmer, a spirited young woman, and a mysterious stranger. As secrets unravel and emotions collide, the film explores themes of love, sacrifice, and redemption. Amidst breathtaking landscapes and cultural traditions, the characters grapple with their pasts, forging unexpected connections that will forever change their destinies.</p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Buddhi Tamang</li>
-                        <li>Raj Thapa Magar</li>
-                        <li>Shishir Bangdel, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
