--- a/guleli.html
+++ b/guleli.html
@@ -9,39 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="guleli.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/emtudtfjfKs?si=5cbeAoYmY4XrwLvD">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="guleli.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/emtudtfjfKs?si=OPMPyaBGSjWYnugN">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Guleli
-            </div><br>
-            <div id="genre">
-                Action, Drama, Superhero | 2h 31m | 11 Kartik,2079
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">When a rebellious, angst-filled, everyday Nepali youth Bicky stumbles upon a superhero costume, he sets out to fight against evil and mysterious Karkat's gang in a crime-ridden, corrupted Kathmandu City. This is the story of Nepal's very own local Superhero, Guleli.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Kundoon Shakya</li>
-                        <li>Divya Dev</li>
-                        <li>Karma Shakya</li>
-                        <li>Lunibha Tuladhar</li>
-                        <!-- <li>Rabindra Singh Baniya, etc.</li> -->
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
