--- a/gharjwai.html
+++ b/gharjwai.html
@@ -10,7 +10,7 @@
 <body>
     <div id="content">
         <div id="contentbox">
-            <img src="duinumbari.png" alt="" id="poster">
+            <img src="gharjwai.png" alt="" id="poster">
             <br>
             <div>
                 <a href="https://youtu.be/E4IhWK1459M?si=BlAjzluuJxeqVml7">
