--- a/hari.html
+++ b/hari.html
@@ -9,39 +9,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="jaari.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/WT7KYuNhULE?si=uZEs1eUIPrPubDAd">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="hari.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/WT7KYuNhULE?si=I3VOfb9CvjNDFckU">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Hari
-            </div><br>
-            <div id="genre">
-                Drama | 2h 10m | 18 Jestha,2075
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">Movie follows a thirty year old overly religious and superstitious man-child named Hari, He had led his life whole following the rules that were set by his ancestors and his strict mother.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Bipin Karki</li>
-                        <li>Sunita Shrestha</li>
-                        <li>Laxmi Bardewa</li>
-                        <li>Kamal Mani Nepal, etc</li>
-                        <!-- <li>Upasanba Nembang, etc.</li> -->
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
