--- a/mahapurush.html
+++ b/mahapurush.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,39 +10,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="mahapurush.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/u4Vc3EnXhZg?si=JpXk1RG6Wf2jfFyL">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="mahapurush.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/u4Vc3EnXhZg?si=hatMo75JSj5wTcio">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Mahapurush
-            </div><br>
-            <div id="genre">
-                Comedy, Drama | 2h 31m | 11 Kartik,2079
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">The story is about a single father who lost his wife years ago; he now lives with his two sons. He falls in love in a later stage of his life. As a result, he must deal with family and social issues, since the idea of getting married at such an age is not a common phenomenon in society and is considered taboo.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Hari Bamsha Acharya</li>
-                        <li>Madan Krishna Shrestha</li>
-                        <li>Gauri Malla</li>
-                        <li>Arun Chhetri</li>
-                        <li>Rabindra Singh Baniya, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
