--- a/modibeni.html
+++ b/modibeni.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,39 +10,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="modibeni.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/XluyYXRxXVw?si=KldRmC2JlZ5EETCy">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="modibeni.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/XluyYXRxXVw?si=RhOTAtW0IfkJAYnV">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Modibeni
-            </div><br>
-            <div id="genre">
-                Drama, Romance, Thriller | 2h 10m | 18 Shrawan,2081
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">In the lush forests, Modibeni encounters Raju (played by Praveen Khatiwada), a mysterious stranger. Their chance meeting sparks an unexpected romance, and they embark on a journey of love and self-discovery. However, societal norms and family expectations threaten their relationship.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Barsha Siwakoti</li>
-                        <li>Amar Pratap Shrestha</li>
-                        <li>Prabin Khatiwada</li>
-                        <li>Saroj Khanal</li>
-                        <li>Rejine Upetri, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
