--- a/nangogaun.html
+++ b/nangogaun.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,39 +10,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="nango gaun.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/FKTLPAzZ44U?si=Gl46H7o_2Auwu3Cv">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="nangogaun.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/FKTLPAzZ44U?si=b9huipxWmXowRXdU">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Nango Gaun
-            </div><br>
-            <div id="genre">
-                Drama, Political | 2h 5m | 19 Bhadra,2080
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">“Nango Gaun” is a gripping tale that sheds light on the relentless battle between corruption and honor, set against the picturesque backdrop of a small Nepali village. Jari Lama (Shishir Bangdel) has been blazing as a corrupt politician in a small village in Kavre for years. The locals are fed up with the politician’s current social standing and dominating manner. To put a stop to Jari’s political career, the villagers push Pasang (Dayahang Rai), a trustworthy and dedicated schoolteacher in the village, to enter politics and bring about change. Politics is not an ordinary subject for Pasang, and as a result, he prefers not to be a part of it. However, with the backing of the locals and the political establishment, he enrolls to make as many amendments as he can.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Dayahang Rai</li>
-                        <li>Miruna Magar</li>
-                        <li>Karma Shakya</li>
-                        <li>Samragyee RL Shah</li>
-                        <li>Shishir Bangdel, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
