--- a/prasad.html
+++ b/prasad.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,39 +10,23 @@
 </head>
 <body>
     <div id="content">
-        <div id="poster">
-            <img src="prasad.png" alt="">
-            <div id="btnbox">
-                <a href="https://youtu.be/_3HkoreYzWQ?si=EfzumfA0nav9FeFN">
-                    <button>Watch Now</button>
+        <div id="contentbox">
+            <img src="prasad.png" alt="" id="poster">
+            <br>
+            <div>
+                <a href="https://youtu.be/_3HkoreYzWQ?si=euetYHBICDS26Vv9">
+                    <button>WATCH</button>
                 </a>
             </div>
-        </div>
-        <div id="details">
-            <div id="title">
-                Prasad
-            </div><br>
-            <div id="genre">
-                Drama, Romance | 2h 25m | 21 Mangshir,2075
-            </div>
             <br><br>
-            <div id="explain">
-                <details>
-                    <summary class="title">PLOT</summary>
-                    <p id="plot">Baburam (Bipin Karki) and Narayani (Namrata Shrestha) are a happily married couple in a small village in Kathmandu but problems arise when they find out they can't have a baby. Ramesh (Nischal Basnet) is a friend of Baburam who appears to have his eyes on Narayani.
-                    </p>
-                </details>
-                <br><br>
-                <details>
-                    <summary class="title">CAST</summary>
-                    <ul>
-                        <li>Bipin Karki</li>
-                        <li>Namrata Shrestha</li>
-                        <li>Nischal Basnet</li>
-                        <li>Basundhara Bhusal</li>
-                        <li>Lokmani Sapkota, etc.</li>
-                    </ul>
-                </details>               
+            <h3>Parts</h3>
+            <div id="parts">
+                None
+<!--                 <div>
+                    <a href="chadke2.html">
+                        <img src="chadke2.png" alt="" class="parts">
+                    </a>
+                </div> -->
             </div>
         </div>
     </div>
