--- a/live.html
+++ b/live.html
@@ -17,9 +17,10 @@
                     <button>WATCH</button>
                 </a>
             </div>
-            <!-- <br><br>
+            <br><br>
             <h3>Parts</h3>
-            <div id="parts">
+            None
+<!--             <div id="parts">
                 <div>
                     <a href="kgf1.html">
                         <img src="kgf1.png" alt="" class="parts">
