--- a/salaar.html
+++ b/salaar.html
@@ -19,14 +19,14 @@
             </div>
             <br><br>
             <h3>Parts</h3>
-            None
-<!--             <div id="parts">
-                <div>
+            <div id="parts">
+                None
+<!--                 <div>
                     <a href="kgf1.html">
                         <img src="kgf1.png" alt="" class="parts">
                     </a>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
         </div>
     </div>
 </body>
