--- a/bollywood.html
+++ b/bollywood.html
@@ -99,7 +99,6 @@
         </div>
     </div>
   </div> 
-<!--   <script src="bollywood.js">
-  </script>  -->
+<script src="bollywood.js"></script>
 </body>
 </html>
